--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Deepcards - Learn, chat, and remember</title>
+    <meta
+      name="description"
+      content="AI-powered learning meets traditional memory techniques. Learn, chat, and remember."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://deepcards.ai/" />
+    <meta property="og:title" content="Deepcards - Learn, chat, and remember" />
+    <meta
+      property="og:description"
+      content="AI-powered learning meets traditional memory techniques. Learn, chat, and remember."
+    />
+    <meta property="og:image" content="https://deepcards.ai/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://deepcards.ai/" />
+    <meta property="twitter:title" content="Deepcards - Learn, chat, and remember" />
+    <meta
+      property="twitter:description"
+      content="AI-powered learning meets traditional memory techniques. Learn, chat, and remember."
+    />
+    <meta property="twitter:image" content="https://deepcards.ai/twitter-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
