--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Deepcards - Learn, chat, and remember</title>
     <meta
       name="description"
-      content="AI-powered learning meets traditional memory techniques. Learn, chat, and remember."
+      content="LLM-powered learning meets traditional memory techniques. Learn, chat, and remember."
     />
 
     <!-- Open Graph / Facebook -->
@@ -16,9 +16,9 @@
     <meta property="og:title" content="Deepcards - Learn, chat, and remember" />
     <meta
       property="og:description"
-      content="AI-powered learning meets traditional memory techniques. Learn, chat, and remember."
+      content="LLM-powered learning meets traditional memory techniques. Learn, chat, and remember."
     />
-    <meta property="og:image" content="https://deepcards.ai/og-image.jpg" />
+    <meta property="og:image" content="https://deepcards.ai/deepcards-1.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -26,9 +26,9 @@
     <meta property="twitter:title" content="Deepcards - Learn, chat, and remember" />
     <meta
       property="twitter:description"
-      content="AI-powered learning meets traditional memory techniques. Learn, chat, and remember."
+      content="LLM-powered learning meets traditional memory techniques. Learn, chat, and remember."
     />
-    <meta property="twitter:image" content="https://deepcards.ai/twitter-image.jpg" />
+    <meta property="twitter:image" content="https://deepcards.ai/deepcards-1.png" />
   </head>
   <body>
     <div id="root"></div>
